Added almost all functionality

--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
     <h3 id="turn">Turn: </h3>
 
     <div class="gameContainer">
-        <div id="11" class="square top left" onclick="markBox(11)"></div>
-        <div id="12" class="square top" onclick="markBox(12)"></div>
-        <div id="13" class="square top right" onclick="markBox(13)"></div>
-        <div id="21" class="square left" onclick="markBox(21)"></div>
-        <div id="22" class="square" onclick="markBox(22)"></div>
-        <div id="23" class="square right" onclick="markBox(23)"></div>
-        <div id="31" class="square bottom left" onclick="markBox(31)"></div>
-        <div id="32" class="square bottom" onclick="markBox(32)"></div>
-        <div id="33" class="square bottom right" onclick="markBox(33)"></div>
+        <div id="11" class="on square top left"></div>
+        <div id="12" class="on square top"></div>
+        <div id="13" class="on square top right"></div>
+        <div id="21" class="on square left"></div>
+        <div id="22" class="on square"></div>
+        <div id="23" class="on square right"></div>
+        <div id="31" class="on square bottom left"></div>
+        <div id="32" class="on square bottom"></div>
+        <div id="33" class="on square bottom right"></div>
     </div>
 
     <p>WINS</p>
 
     <div class="wins">
-        <p>X - </p>
-        <p>O - </p>
+        <p id="xWins">X - </p>
+        <p id="oWins">O - </p>
     </div>
 
     <script src="script.js"></script>
