fixed bugs and implemented full functionality

--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
         <div id="33" class="on square bottom right"></div>
     </div>
 
-    <p>WINS</p>
+    <p id="winnerText">WINS</p>
 
     <div class="wins">
         <p id="xWins">X - </p>
+        <button id="reset" onclick="resetGame()">RESET?</button>
         <p id="oWins">O - </p>
     </div>
 
